fixing alignment and reset of position on events

--- a/src/assets/scss/header/_header.scss
+++ b/src/assets/scss/header/_header.scss
@@ -39,6 +39,7 @@
     align-items: center;
     img {
         max-height: 140px;
+        filter: drop-shadow(0px 0px 5px white);
         padding: 5px;
         @media #{$large-mobile} {
             max-width: 140px;
@@ -49,7 +50,7 @@
 .transparent {
     &.v-toolbar:not(.tab-toolbar) {
         .v-toolbar__content {
-            padding: 0 50px;
+            padding: 0 15px;
             height: 100%!important;
             @media #{$sm-layout} {
                 padding: 0 30px;
@@ -303,6 +304,7 @@
             img {
                max-height: 140px;
                max-width: 140px;
+               filter: drop-shadow(0px 0px 5px white);
             }
         }
     }
